wrapped item images in divs to ensure they fit inside grid cells

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+
+
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,9 +18,58 @@ body {
   width: 100%;
 }
 
+html {
+    font-size: 62.5%; /* 10px */
+}
+
+body {
+    font-size: 1.8rem;
+    position: relative;
+    color: ;
+    font-family: ;
+}
+
+
+/* STRIPPING STYLES */
+body, 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+button {
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    display: inline-block;
+    text-decoration: none;
+    color: inherit;
+}
+
+img {
+    max-width: 100%;
+    display: block;
+    max-height: 100%;
+}
+
+button {
+    border: none;
+    cursor: pointer;
+}
+
+
 /* CANVASES */
 .canvas {
-  display: none;
+  /* display: none; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -30,16 +91,22 @@ body {
 
 /* OBJECTS */
 .objects-container {
+  /* background: black; */
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50% );
   width: calc(100vw - 700px); 
   height: calc(100vh - 500px);
+
   display: grid;
-  grid-template-columns: repeat(4, minmax(auto,200px));
-  grid-template-rows: repeat(4, minmax(auto,200px));
-  background: black;
+  grid-template-columns: repeat(4, minmax(100px, 200px));
+  grid-template-rows: repeat(4, minmax(100px, 200px));
+  grid-template-areas:
+  "c1  c2  c3  c4"
+  "c5  c6  c7  c8"
+  "c9  c10 c11 c12"
+  "c13 c14 c15 c16"
 }
 
 #layer_01 .objects-container {
@@ -71,14 +138,6 @@ body {
 }
 
 
-[id^="item_a_"][id$="01"] {
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-[id^="item_a_"][id$="02"] {
-  grid-column-start: 3;
-  grid-column-end: 4;
-}
 
 
 /* INVENTORY */
